--- a/docs/docs/llms/human-feedback/index.mdx
+++ b/docs/docs/llms/human-feedback/index.mdx
@@ -1,11 +1,84 @@
 ---
 sidebar_position: 1
 ---
+import { Card, LogoCard, CardGroup, PageCard, SmallLogoCard } from "@site/src/components/Card";
 
 # Overview
 
-## <span style={{color: "red"}}>TODO - make overview</span>
+MLflow's human feedback capabilities enable you to collect, manage, and leverage expert insights to improve your GenAI applications. By gathering structured feedback from domain experts and end-users, you can continuously enhance your models' quality and relevance.
 
+## Domain Expert Feedback
+
+Collect high-quality feedback from subject matter experts to improve your models and shape your evaluation metrics.
+
+<CardGroup singleColumn={true}>
+  <PageCard
+    headerText="Intuitive labeling UIs for business users"
+    icon="fa-clipboard-check"
+    text={[
+      "MLflow's Review App is built to quickly collect feedback from busy domain experts on production logs. Experts can view inputs, outputs, and intermediate steps to provide feedback in seconds. Use pre-defined feedback questions or add custom ones tailored to your needs."
+    ]}
+    isBoldHeader={true}
+  />
+  <PageCard
+    headerText="Structured feedback management"
+    icon="fa-database"
+    text={[
+      "Replace spreadsheet-based labeling workflows with MLflow's data model. Feedback is directly attached to source traces as version-controlled labels, allowing you to track labeling progress and visualize results in a unified interface."
+    ]}
+    isBoldHeader={true}
+  />
+  <PageCard
+    headerText="Integrated Chat App for testing"
+    icon="fa-comments"
+    text={[
+      "When you have a new version ready for testing, load it into the Review App's pre-built chat UI to let domain experts interact with the version and quickly provide feedback."
+    ]}
+    isBoldHeader={true}
+  />
+</CardGroup>
+
+## End-User Feedback
+
+Capture feedback directly from your application's users to understand real-world performance and user satisfaction.
+
+<CardGroup singleColumn={true}>
+  <PageCard
+    headerText="End-user feedback capture"
+    icon="fa-users"
+    text={[
+      "Use MLflow's APIs to capture feedback that end users provide in your deployed application. Similar to the Review App, this feedback is attached to source traces as version-controlled labels and can be visualized in the MLflow UI."
+    ]}
+    isBoldHeader={true}
+  />
+  <PageCard
+    headerText="Feedback-driven improvement"
+    icon="fa-chart-line"
+    text={[
+      "Turn user feedback into actionable insights by identifying patterns in user satisfaction and pain points. Use this data to prioritize improvements and measure the impact of changes on user experience over time."
+    ]}
+    isBoldHeader={true}
+  />
+</CardGroup>
+
+## Next Steps
+
+<CardGroup>
+  <PageCard
+    headerText="Review App"
+    link="review-app"
+    text={[
+      "Learn how to use the Review App to collect structured feedback from domain experts."
+    ]}
+  />
+  <PageCard
+    headerText="Logging User Feedback"
+    link="logging-user-feedback"
+    text={[
+      "Discover how to capture and log end-user feedback from your deployed applications."
+    ]}
+  />
+</CardGroup>
 
 - sell our approach of the seperate sme interface 
 - but explain they can also use the mlflow uis if they need more 
