--- a/docs/docs/llms/prompts/index.mdx
+++ b/docs/docs/llms/prompts/index.mdx
@@ -9,7 +9,7 @@ import TabItem from "@theme/TabItem";
 
 # Prompt Management in MLflow
 
-## <span style={{color: "red"}}>TODO - raw mlflow doc</span>
+MLflow's Prompt Registry is a core component of MLflow's enterprise-ready governance solution.Track every prompt template and its version history, linking the prompt to evaluation results. Integrate prompts into your app via our SDK to allow non-technical users to edit prompts without code access.
 
 
 ## What is MLflow Prompt Registry?
