--- a/docs/docs/tracing/tracing-schema.mdx
+++ b/docs/docs/tracing/tracing-schema.mdx
@@ -90,12 +90,12 @@ A trace is a root object composed of two components:
 - <APILink fn="mlflow.entities.TraceData">`TraceData`</APILink>
 
 :::tip
-Check the API documentation for helper methods on these dataclass objects for more information on how to convert or extract data from them.
+Check the API documentation for helper methods on these `dataclass` objects for more information on how to convert or extract data from them.
 :::
 
 ## Trace Info
 
-Trace Info is a dataclass object that contains metadata about the trace. This metadata includes information about the trace's origin, status, and
+Trace Info is a `dataclass` object that contains metadata about the trace. This metadata includes information about the trace's origin, status, and
 various other data that aids in retrieving and filtering traces when used with <APILink fn="mlflow.client.MlflowClient.search_traces" /> and for
 navigation of traces within the MLflow UI.
 
@@ -111,6 +111,7 @@ The primary components of MLflow <APILink fn="mlflow.entities.TraceInfo">`TraceI
   <thead>
     <tr>
       <th>**Property**</th>
+      <th>**Type**</th>
       <th>**Description**</th>
       <th>**Note**</th>
     </tr>
@@ -118,6 +119,7 @@ The primary components of MLflow <APILink fn="mlflow.entities.TraceInfo">`TraceI
   <tbody>
     <tr>
       <td>**trace_id**</td>
+      <td>`str`</td>
       <td>
         A unique identifier for the trace. The identifier is used within MLflow
         and integrated system to resolve the event being captured and to provide
@@ -135,24 +137,16 @@ The primary components of MLflow <APILink fn="mlflow.entities.TraceInfo">`TraceI
       </td>
     </tr>
     <tr>
-      <td>**experiment_id**</td>
+      <td>**trace_location**</td>
+      <td><APILink fn="mlflow.entities.TraceLocation" /></td>
       <td>
-        The ID of the experiment in which the trace was logged. All logged
-        traces are associated with the current active experiment when the trace
-        is generated (during invocation of an instrumented object).
+        The location where the trace is stored.
       </td>
-      <td>
-        {
-          "This value is immutable and is set by the tracing backend. It is a system-controlled value that is very useful when using the "
-        }
-        <APILink fn="mlflow.client.MlflowClient.search_traces">
-          {"Search Traces"}
-        </APILink>
-        {" API."}
-      </td>
+      <td>MLflow currently supports MLflow Experiment or Databricks Inference Table as a trace location.</td>
     </tr>
     <tr>
-      <td>**timestamp_ms**</td>
+      <td>**request_time**</td>
+      <td>`int`</td>
       <td>
         The time that marks the moment when the root span of the trace was
         created. This is a Unix timestamp in milliseconds.
@@ -167,7 +161,8 @@ The primary components of MLflow <APILink fn="mlflow.entities.TraceInfo">`TraceI
       </td>
     </tr>
     <tr>
-      <td>**execution_time_ms**</td>
+      <td>**execution_duration**</td>
+      <td>`int`</td>
       <td>
         The time that marks the moment when the call to end the trace is made.
         This is a Unix timestamp in milliseconds.
@@ -179,10 +174,11 @@ The primary components of MLflow <APILink fn="mlflow.entities.TraceInfo">`TraceI
       </td>
     </tr>
     <tr>
-      <td>**status**</td>
-      <td>An enumerated value that denotes the status of the trace.</td>
+      <td>**state**</td>
+      <td><APILink fn="mlflow.entities.TraceState" /></td>
+      <td>An enumerated value that denotes the state of the trace.</td>
       <td>
-        `TraceStatus` values are one of:
+        `TraceState` values are one of:
 
         - **OK** - The trace and the
         instrumented call were successful.
@@ -192,14 +188,27 @@ The primary components of MLflow <APILink fn="mlflow.entities.TraceInfo">`TraceI
         - **IN_PROGRESS** - The trace has
         started and is currently running. Temporary state that will update while
         spans are being logged to a trace.
-        - **TRACE_STATUS_UNSPECIFIED** -
+        - **STATE_UNSPECIFIED** -
         internal default state that should not be seen in logged traces.
       </td>
     </tr>
     <tr>
-      <td>**request_metadata**</td>
+      <td>**request_preview**</td>
+      <td>`str`</td>
+      <td>The `request_preview` property is the input data for the entire trace. The input `str` is a JSON-serialized string that contains the input data for the trace, typically the end-user request that was submitted as a call to the application.</td>
+      <td>Due to the varied structures of inputs that could go to a given application that is being instrumented by MLflow Tracing, all inputs are JSON serialized for compatibility's sake. This allows for the input data to be stored in a consistent format, regardless of the input data's structure. This field can be truncated if it exceeds the length limit.</td>
+    </tr>
+    <tr>
+      <td>**response_preview**</td>
+      <td>`str`</td>
+      <td>The `response_preview` property is the final output data that will be returned to the caller of the invocation of the application.</td>
+      <td>Similar to the request property, this value is a JSON-serialized string to maximize compatibility of disparate formats. This field can be truncated if it exceeds the length limit.</td>
+    </tr>
+    <tr>
+      <td>**trace_metadata**</td>
+      <td>`dict[str, str]`</td>
       <td>
-        The request metadata are additional key-value pairs of information that
+        The trace metadata are additional key-value pairs of information that
         are associated with the Trace, set and modified by the tracing backend.
       </td>
       <td>
@@ -210,6 +219,7 @@ The primary components of MLflow <APILink fn="mlflow.entities.TraceInfo">`TraceI
     </tr>
     <tr>
       <td>**tags**</td>
+      <td>`dict[str, str]`</td>
       <td>
         User-defined key-value pairs that can be applied to a trace for applying
         additional context, aid in [search functionality](/tracing/api/search/), or to
@@ -221,13 +231,22 @@ The primary components of MLflow <APILink fn="mlflow.entities.TraceInfo">`TraceI
         after a trace has been logged to an experiment.
       </td>
     </tr>
-
+    <tr>
+      <td>**assessments**</td>
+      <td>List of <APILink fn="mlflow.entities.Assessment" /></td>
+      <td>
+        A list of assessments associated with the trace.
+      </td>
+      <td>
+        Currently, this property is only supported on Databricks.
+      </td>
+    </tr>
   </tbody>
 </table>
 
 ## Trace Data
 
-The MLflow <APILink fn="mlflow.entities.trace_data.TraceData">`TraceData`</APILink> object is a dataclass object that holds the core of the trace data.
+The MLflow <APILink fn="mlflow.entities.trace_data.TraceData">`TraceData`</APILink> object is a `dataclass` object that holds the core of the trace data.
 This object contains the following elements:
 
 <table>
@@ -240,11 +259,6 @@ This object contains the following elements:
   </thead>
   <tbody>
     <tr>
-      <td>**request**</td>
-      <td>The `request` property is the input data for the entire trace. The input `str` is a JSON-serialized string that contains the input data for the trace, typically the end-user request that was submitted as a call to the application.</td>
-      <td>Due to the varied structures of inputs that could go to a given application that is being instrumented by MLflow Tracing, all inputs are JSON serialized for compatibility’s sake. This allows for the input data to be stored in a consistent format, regardless of the input data’s structure.</td>
-    </tr>
-    <tr>
       <td>**spans**</td>
       <td>
         {"This property is a list of "}
@@ -252,11 +266,6 @@ This object contains the following elements:
         {" objects that represent the individual steps of the trace."}
       </td>
       <td>For further information on the structure of Span objects, see the section below.</td>
-    </tr>
-    <tr>
-      <td>**response**</td>
-      <td>The response property is the final output data that will be returned to the caller of the invocation of the application.</td>
-      <td>Similar to the request property, this value is a JSON-serialized string to maximize compatibility of disparate formats.</td>
     </tr>
   </tbody>
 </table>
