Add documentation for tracing SDK
Signed-off-by: B-Step62 <yuki.watanabe@databricks.com>

--- a/docs/docs/tracing/session.mdx
+++ b/docs/docs/tracing/session.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_position: 6
-sidebar_label: Session
+sidebar_label: Managing Chat Sessions
 ---
 
 import { APILink } from "@site/src/components/APILink";
