clean up docs references to stable APIs
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/docs/docs/llms/deployments/index.mdx
+++ b/docs/docs/llms/deployments/index.mdx
@@ -1457,11 +1457,8 @@ Here are some examples for how you might use curl to interact with the MLflow AI
 
 **Note:** Remember to replace `my.deployments:8888` with the URL of your actual MLflow AI Gateway.
 
-## Plugin LLM Provider (Experimental) \{#deployments-plugin}
+## Plugin LLM Provider \{#deployments-plugin}
 
-:::warning attention
-This feature is in active development and is marked as Experimental. It may change in a future release without warning.
-:::
 
 The MLflow AI Gateway supports the use of custom language model providers through the use of plugins.
 A plugin is a Python package that provides a custom implementation of a language model provider.
