--- a/docs/docs/llms/index.mdx
+++ b/docs/docs/llms/index.mdx
@@ -162,7 +162,7 @@ MLflow provides native integrations for model packaging with major GenAI librari
   <SmallLogoCard link="/llms/sentence-transformers">
     <span>![SentenceTransformers Logo](/images/logos/sentence-transformers-logo.png)</span>
   </SmallLogoCard>
-  <SmallLogoCard link="/model#promptflow-promptflow-experimental">
+  <SmallLogoCard link="/model#promptflow-promptflow">
     <span>![PromptFlow Logo](/images/logos/promptflow-logo.png)</span>
   </SmallLogoCard>
   <SmallLogoCard link="/llms/chat-model-intro">
