--- a/docs/docs/tracing/faq.mdx
+++ b/docs/docs/tracing/faq.mdx
@@ -5,6 +5,12 @@ sidebar_label: FAQ
 
 # FAQ
 
+### Q: Can I use MLflow Tracing for production applications?
+
+Yes, MLflow Tracing is stable and designed to be used in production environments.
+
+When using MLflow Tracing in production environments, we recommend using the [MLflow Tracing SDK](https://pypi.org/project/mlflow-tracing/) (`mlflow-tracing`) to instrument your code/models/agents with a minimal set of dependencies and a smeller installation footprint. The SDK is designed to be a perfect fit for production environments where you want an efficient and lightweight tracing solution. Please refer to the [Production Monitoring](/tracing/production) section for more details.
+
 ### Q: I cannot open my trace in the MLflow UI. What should I do?
 
 There are multiple possible reasons why a trace may not be viewable in the MLflow UI.
