--- a/docs/docs/tracing/index.mdx
+++ b/docs/docs/tracing/index.mdx
@@ -256,7 +256,7 @@ MLflow Tracing is production ready. Read [Production Tracing](/tracing/productio
 
 :::tip
 
-    When using MLflow Tracing in a production environment, we recommend using the [Lightweight Tracing SDK](/tracing/minimal-sdk) (`mlflow-tracing`) that is optimized for reducing the total installation size and minimizing the set of dependencies.
+    When using MLflow Tracing in a production environment, we recommend using the [Lightweight Tracing SDK](/tracing/lightweight-sdk) (`mlflow-tracing`) that is optimized for reducing the total installation size and minimizing the set of dependencies.
 
 :::
 
