--- a/docs/docs/tracing/production.mdx
+++ b/docs/docs/tracing/production.mdx
@@ -13,7 +13,7 @@ Machine learning projects don't conclude with their initial launch. Ongoing moni
 
 ## Pro Tip: Using the Lightweight Tracing SDK for Reducing the Footprint
 
-The [MLflow Tracing SDK `mlflow-tracing`](/tracing/minimal-sdk) is a lightweight package that only includes the minimum set of dependencies to instrument your code/models/agents with MLflow Tracing.
+The [MLflow Tracing SDK `mlflow-tracing`](/tracing/lightweight-sdk) is a lightweight package that only includes the minimum set of dependencies to instrument your code/models/agents with MLflow Tracing.
 
 <Card>
   <div className="flex-column">
