--- a/docs/docs/tracing/index.mdx
+++ b/docs/docs/tracing/index.mdx
@@ -214,6 +214,9 @@ MLflow Tracing is integrated with various GenAI libraries and provide **one-line
   <SmallLogoCard link="/tracing/integrations/txtai">
     <span>![txtai Logo](/images/logos/txtai-logo.png)</span>
   </SmallLogoCard>
+  <SmallLogoCard link="/tracing/integrations/smolagents">
+    <span>![Smolagents Logo](/images/logos/smolagents-logo.png)</span>
+  </SmallLogoCard>
 </CardGroup>
 <br />
 
