--- a/docs/docs/tracing/integrations/index.mdx
+++ b/docs/docs/tracing/integrations/index.mdx
@@ -72,6 +72,9 @@ import TabItem from "@theme/TabItem";
   <SmallLogoCard link="/tracing/integrations/instructor">
     <span>![txtai Logo](/images/logos/txtai-logo.png)</span>
   </SmallLogoCard>
+  <SmallLogoCard link="/tracing/integrations/smolagents">
+    <span>![Smolagents Logo](/images/logos/smolagents-logo.png)</span>
+  </SmallLogoCard>
 </CardGroup>
 <br />
 
