Add note about model registry version incompatibility between server and client
Signed-off-by: B-Step62 <yuki.watanabe@databricks.com>

--- a/docs/docs/model-registry/index.mdx
+++ b/docs/docs/model-registry/index.mdx
@@ -447,6 +447,12 @@ client.rename_registered_model(
 
 #### Listing and Searching MLflow Models
 
+:::warning important
+
+     When using MLflow ≥ 2.21.0 clients with older Model Registry servers (< 2.21.0), search API behavior may differ from expected results. This version mismatch can cause inconsistent search outcomes or missing results. To ensure consistent behavior, please align MLflow versions by either upgrading your server to MLflow 2.21.0 or newer (recommended) or downgrading your client to match your server version.
+
+:::
+
 You can fetch a list of registered models in the registry with a simple method.
 
 ```python
