--- a/docs/docs/tracing/integrations/index.mdx
+++ b/docs/docs/tracing/integrations/index.mdx
@@ -75,6 +75,9 @@ import TabItem from "@theme/TabItem";
   <SmallLogoCard link="/tracing/integrations/smolagents">
     <span>![Smolagents Logo](/images/logos/smolagents-logo.png)</span>
   </SmallLogoCard>
+  <SmallLogoCard link="/tracing/integrations/pydantic_ai">
+    <span>![Smolagents Logo](/images/logos/pydanticai-logo.png)</span>
+  </SmallLogoCard>
 </CardGroup>
 <br />
 
